--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -116,7 +116,7 @@
             text-align: left;
             .chart-detail-wrapper {
               background-color: white;
-              padding: 25px 26px;
+              padding: 25px 10px 25px 26px;
               height: 32%;
               vertical-align: center;
               align-items: center;
@@ -136,7 +136,7 @@
                 margin: 0;
               }
               .total-detail-heading {
-                font-family: Helvetica Neue;
+                font-family: Helvetica Neue, sans-serif;
                 font-size: 16px;
                 line-height: 27px;
                 color: #3A3A3A;
@@ -150,7 +150,7 @@
                 font-weight: 900;
               }
               .total-detail-compare-value {
-                font-family: Helvetica Neue;
+                font-family: Helvetica Neue, sans-serif;
                 font-size: 16px;
                 line-height: 27px;
                 color: #70CE37;
@@ -198,7 +198,7 @@
         .forgot-pwd-btn {
           float: right;
           margin-top: 8px;
-          font-family: Helvetica Neue;
+          font-family: Helvetica Neue, sans-serif;
           font-size: 12px;
           line-height: 18px;
           text-align: center;
@@ -247,6 +247,9 @@
     .my-listing {
       .listing-body {
         width: 100%;
+        .add-gear-btn {
+          margin-top: -3px;
+        }
       }
       a.theme-btn-primary {
         padding-top: 9px !important;
@@ -271,13 +274,13 @@
           }
           .listing-data-tbody {
             .gear-brand {
-              font-family: Helvetica Neue;
+              font-family: Helvetica Neue, sans-serif;
               font-size: 16px;
               line-height: 28px;
               color: #252525;
             }
             .gear-category {
-              font-family: Helvetica Neue;
+              font-family: Helvetica Neue, sans-serif;
               font-size: 12px;
               line-height: 18px;
               letter-spacing: 0.03em;
@@ -411,7 +414,7 @@
     th {
       padding-bottom: 26px;
       text-align: left;
-      font-family: Helvetica Neue;
+      font-family: Helvetica Neue, sans-serif;
       font-size: 16px;
       line-height: 27px;
       color: #767676;
@@ -477,13 +480,13 @@
   justify-content: center;
 
   & > .status-bar {
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, sans-serif;
     font-size: 12px;
     line-height: 18px;
     text-align: center;
     letter-spacing: 0.03em;
     color: #FFFFFF;
-    width: 84px;
+    width: 33.4%;
     height: 25px;
     align-items: center;
     display: flex;
@@ -497,19 +500,19 @@
   }
   .status-bar2 {
     z-index: 4;
-    margin-left: -7px;
+    margin-left: -2.78%;
     background-color: #FBF6E8;
     color: #DBA61C !important;
   }
   .status-bar3 {
     z-index: 3;
-    margin-left: -14px;
+    margin-left: -5.56%;
     background-color: #F4F4F4;
     color: #252525;
     opacity: 0.5;
-    width: 84px;
+    width: 33.4%;
     height: 25px;
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, sans-serif;
     font-size: 12px;
     line-height: 18px;
     text-align: center;
@@ -518,7 +521,6 @@
     display: flex;
     justify-content: center;
   }
-
   .rotated-square {
     transform: rotate(45deg);
     width: 40px;
@@ -526,14 +528,14 @@
 }
 .tb-project-name {
   cursor: pointer;
-  font-family: Helvetica Neue;
+  font-family: Helvetica Neue, sans-serif;
   font-size: 16px;
   line-height: 28px;
   color: #252525;
 }
 .tb-category-name {
   cursor: pointer;
-  font-family: Helvetica Neue;
+  font-family: Helvetica Neue, sans-serif;
   font-size: 12px;
   line-height: 18px;
   letter-spacing: 0.03em;
@@ -553,14 +555,14 @@
     border: none !important;
     tr {
       .tb-project-name {
-        font-family: Helvetica Neue;
+        font-family: Helvetica Neue, sans-serif;
         font-size: 16px;
         line-height: 28px;
         color: #252525;
         font-weight: 600;
       }
       .tb_pay_per {
-        font-family: Helvetica Neue;
+        font-family: Helvetica Neue, sans-serif;
         font-size: 21px;
         line-height: 37px;
         color: #252525;
@@ -584,7 +586,7 @@
       border: none;
     }
     .history-rental-duration {
-      font-family: Helvetica Neue;
+      font-family: Helvetica Neue, sans-serif;
       font-size: 12px;
       line-height: 18px;
       letter-spacing: 0.03em;
@@ -592,7 +594,7 @@
       opacity: 0.5;
     }
     .history-rental-period {
-      font-family: Helvetica Neue;
+      font-family: Helvetica Neue, sans-serif;
       font-size: 16px;
       line-height: 27px;
       color: #252525;
@@ -702,7 +704,7 @@ span.edit_my_gear {
      opacity: 0.5;
    }
    .order_history_client_second_name {
-     font-family: Helvetica Neue;
+     font-family: Helvetica Neue, sans-serif;
      font-size: 16px;
      line-height: 27px;
      color: #252525;
@@ -721,7 +723,7 @@ span.edit_my_gear {
     border-right: 1px solid #F5F5F5;
   }
    .order_history_pay_title {
-     font-family: Helvetica Neue;
+     font-family: Helvetica Neue, sans-serif;
      font-size: 12px;
      line-height: 18px;
      letter-spacing: 0.03em;
@@ -786,14 +788,14 @@ span.edit_my_gear {
     }
   }
   .mlspdf_name_tag_categoryName {
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, sans-serif;
     font-size: 16px;
     font-weight: 700;
     line-height: 28px;
     color: #252525;
   }
   .mlspdf_name_tag_brandName {
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, sans-serif;
     font-size: 12px;
     line-height: 18px;
     letter-spacing: 0.03em;
@@ -891,7 +893,7 @@ span.edit_my_gear {
   }
   .total-count-wrapper {
     .col {
-      border-right: solid 18px #f5f5f5 !important;
+      border-right: solid 18px #faf8f9 !important;
       &:last-child {
         border-right: none !important;
       }
@@ -924,7 +926,7 @@ span.edit_my_gear {
       .forgot-pwd-btn {
         float: right;
         margin-top: 8px;
-        font-family: Helvetica Neue;
+        font-family: Helvetica Neue, sans-serif;
         font-size: 12px;
         line-height: 18px;
         text-align: center;
@@ -1281,7 +1283,7 @@ span.edit_my_gear {
           .duration {
             width: 34%;
             .history-rental-period {
-              font-family: Helvetica Neue;
+              font-family: Helvetica Neue, sans-serif;
               font-size: 16px;
               line-height: 27px;
               text-align: center;
@@ -1291,6 +1293,17 @@ span.edit_my_gear {
           }
           .owner {
             width: 33%;
+            display: flex;
+            align-items: center;
+            img {
+              width: 36px;
+              height: 36px;
+              border-radius: 18px;
+              margin-right: 16px;
+            }
+            div {
+              display: grid;
+            }
           }
           .order-price-per-day {
             width: 16%;
@@ -1304,7 +1317,7 @@ span.edit_my_gear {
         }
       }
       .grey-small-text {
-        font-family: Helvetica Neue;
+        font-family: Helvetica Neue, sans-serif;
         font-size: 12px;
         line-height: 18px;
         text-align: center;
@@ -1334,10 +1347,6 @@ span.edit_my_gear {
   }
   .wrraper_dashboard {
     padding: 0 !important;
-    .payment-card {
-      width: 100% !important;
-      margin-bottom: 20px;
-    }
     .add-payment-method {
       min-height: 150px !important;
       margin: 0 !important;
@@ -1424,7 +1433,7 @@ span.edit_my_gear {
         width: 100%;
       }
       .forgot-pwd-btn {
-        font-family: Helvetica Neue;
+        font-family: Helvetica Neue, sans-serif;
         font-size: 12px;
         line-height: 18px;
         text-align: center;
@@ -1502,13 +1511,13 @@ span.edit_my_gear {
       width: 50% !important;
     }
     .mlspdf_name_tag_categoryName {
-      font-family: Helvetica Neue;
+      font-family: Helvetica Neue, sans-serif;
       font-size: 16px;
       line-height: 28px;
       color: #252525;
     }
     .mlspdf_name_tag_brandName {
-      font-family: Helvetica Neue;
+      font-family: Helvetica Neue, sans-serif;
       font-size: 12px;
       line-height: 18px;
       letter-spacing: 0.03em;
@@ -1580,7 +1589,17 @@ span.edit_my_gear {
         display: grid;
       }
       .owner {
-        display: grid;
+        display: flex;
+        align-items: center;
+        img {
+          width: 36px;
+          height: 36px;
+          border-radius: 18px;
+          margin-right: 16px;
+        }
+        div {
+          display: grid;
+        }
       }
       .order-item-bottom {
         display: flex;
@@ -1763,9 +1782,6 @@ span.edit_my_gear {
     button {
       cursor: pointer;
     }
-  }
-  .status-bar, .status-bar3 {
-    width: 64px !important;
   }
 
   .styles_closeButton__20ID4 {
