--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -640,7 +640,6 @@ span.edit_my_gear {
 }
 .gear-edit-modal {
   max-width: 1200px !important;
-  height: 1400px;
   width: 100%;
 
   .gear-edit-modal-header {
@@ -657,7 +656,7 @@ span.edit_my_gear {
 .rental-calendar-modal {
   max-width: 1200px !important;
   width: 1200px;
-  height: 1100px;
+  height: 100%;
 }
 .address-wrapper {
   display: flex;
@@ -918,7 +917,6 @@ span.edit_my_gear {
       }
     }
   }
-
   .account-detail {
     .account-detail-heading {
       padding: 34px 0 0 48px;
@@ -966,7 +964,6 @@ span.edit_my_gear {
       }
     }
   }
-
   .gear-edit-modal {
     .edit_listgear_body_all {
       flex: none;
@@ -987,11 +984,6 @@ span.edit_my_gear {
               display: block !important;
               color: #ccc;
 
-              .dropdown-menu {
-                margin-top: 287px !important;
-                margin-left: -266px !important;
-                width: 100%;
-              }
               & > div:first-child {
                 button {
                   width: 100%;
@@ -1038,7 +1030,6 @@ span.edit_my_gear {
       }
     }
   }
-
   .my-listing {
     .desktop-gear-item {
       display: none;
@@ -1092,7 +1083,7 @@ span.edit_my_gear {
     }
   }
   .wrraper_dashboard {
-    padding: 0px !important;
+    padding: 0 !important;
     background-color: white !important;
 
     img {
@@ -1223,16 +1214,17 @@ span.edit_my_gear {
       }
     }
   }
-
   .listing-data-tbody {
     border-bottom: solid 16px #faf8f9 !important;
+  }
+  .add-gear-btn {
+    width: 25% !important;
   }
 
   .dashboard-chart-wrapper {
     border: solid 18px #faf8f9;
     background-color: #faf8f9 !important;
   }
-
   .dashboard-pagination {
     background-color: white !important;
     margin: 0 !important;
@@ -1478,7 +1470,7 @@ span.edit_my_gear {
 
   .listing-data-slice {
     border: none !important;
-    margin-bottom: none !important;
+    margin-bottom: 0 !important;
   }
   .table-responsive {
     background: white;
@@ -1635,35 +1627,30 @@ span.edit_my_gear {
             margin-left: 7px !important;
           }
         }
-        .user-info{
-          .user-name{
+        .user-info {
+          .user-name {
             padding-left: 0px !important;
           }
-          .row{
+          .row {
             display: none;
           }
         }
       }
     }
   }
-  .dashboard-body{
-    .listing-body{
-      .align-items-center{
-      }
-      .fa-table-selected{
+  .dashboard-body {
+    .listing-body {
+      .fa-table-selected {
         margin-top:0px !important;
-
-        .react-tabs__tab-list{
+        .react-tabs__tab-list {
           width:100% !important;
           margin-left: 0px;
           margin-right: 0px;
           max-width: 1330px !important;
           margin-bottom: 16px !important;
-          .list-menu-letter,list-calendar-letter{
+          .list-menu-letter,list-calendar-letter {
             display: block !important;
           }
-
-
         }
         .wrraper_dashboard {
           padding: 0px 16px !important;
@@ -1726,11 +1713,6 @@ span.edit_my_gear {
               display: block !important;
               color: #ccc;
 
-              .dropdown-menu {
-                margin-top: 287px !important;
-                margin-left: -266px !important;
-                width: 100%;
-              }
               & > div:first-child {
                 button {
                   width: 100%;
@@ -1760,6 +1742,7 @@ span.edit_my_gear {
           width: 100%;
           .add-gear-address {
             width: 100%;
+            padding: 0;
             .address-wrapper {
               display: block !important;
               .custom-input {
