--- a/src/js/containers/Dashboard/GearHistory/style.css
+++ b/src/js/containers/Dashboard/GearHistory/style.css
@@ -281,8 +281,16 @@
 .rbc-event-item-wrapper {
     display: flex;
 }
+.rbc-event.rbc-event-allday {
+    height: 100px;
+}
+.rbc-event-content {
+    visibility: hidden;
+}
 
 .delete-period-button-container {
+    display: flex;
+    justify-content: space-between;
     padding: 20px;
 }
 
