--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -178,10 +178,10 @@ img {
   margin-right:7px;
   margin-left:7px !important;
 }
-.notification-message{
+.notification-message {
   h4 {
     color:white;
-
+    font-size: 24px;
   }
 }
 .notification-error {
