CRT-5, CRT-4 solved

--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -361,6 +361,10 @@
       }
     }
 
+    .custom-button-find {
+      width: 100%;
+    }
+
     .slide {
       width: 100%;
       margin-right: auto;
