--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -237,7 +237,7 @@ a.forgot-pwd-link {
       width: 100%;
     }
   }
-  .social-buttons .btn-social {
+  .login .social-buttons .btn-social {
     margin-right: 30px !important;
     &:last-child {
       margin-right: 0 !important;
