--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -51,15 +51,16 @@
           .list-group-item > .item-active {
             background-color: $primary-color;
             color: $white;
+            padding: 14px 1.25rem;
 
             &::after {
               content: "";
               position: absolute;
               right: -17px;
-              top: 7px;
+              top: 8px;
               z-index: 444;
-              border: 17px solid;
-              border-color: $primary-color $primary-color transparent transparent;
+              border: 18px solid;
+              border-color: #f82462 #f82462 transparent transparent;
               transform: rotate(45deg);
             }
           }
