--- a/src/scss/bootstrap4.1.3/_list-group.scss
+++ b/src/scss/bootstrap4.1.3/_list-group.scss
@@ -45,7 +45,7 @@
   display: block;
   padding: $list-group-item-padding-y $list-group-item-padding-x;
   // Place the border on the list items and negative margin up for better styling
-  margin-bottom: -$list-group-border-width;
+  //margin-bottom: -$list-group-border-width;
   background-color: $list-group-bg;
   border: $list-group-border-width solid $list-group-border-color;
 
