--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -32,17 +32,12 @@ header {
   padding: 0;
   width: 100%;
   height: 100%;
-
-
-
-
-  }
-
+}
 
   .navbar-menu {
     @include media-breakpoint-down(sm) {
       display: flex;
-      flex-direction: row;
+      flex-direction: row-reverse;
       justify-content: flex-end;
       width: 100%;
     }
