CRT-2: edit gear - image editing solved

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -44,3 +44,4 @@
 @import 'components/empty_activity';
 @import 'components/customspinner';
 @import 'components/calendar/calendar';
+@import 'components/confirm-modal';
