--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -37,6 +37,8 @@
         input, label {
           margin-left: 15px;
           font-size: 14px;
+        }
+        label {
           color: #ccc;
         }
       }
@@ -49,6 +51,10 @@
         textarea {
           width: 100%;
           border-bottom:0;
+
+          &:focus~label {
+            line-height: 32px;
+          }
         }
       }
     }
@@ -154,6 +160,7 @@
       &.active {
         color: white;
         background-color: #00F077;
+        border: 1px solid #00F077;
       }
     }
 
@@ -429,9 +436,8 @@
       & > div {
         background: #fff1e1 !important;
 
-        input{
+        input {
           margin: 0px !important;
-          color: #f00;
         }
       }
     }
@@ -622,8 +628,7 @@
       width: 100% !important;
       .category_first {
         width: 100% !important;
-
-        }
+      }
       .category_description_ta{
         width: 100%!important;
         textarea {
