--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -656,7 +656,7 @@ span.edit_my_gear {
 .rental-calendar-modal {
   max-width: 1200px !important;
   width: 1200px;
-  height: 100%;
+  height: 100vh;
 }
 .address-wrapper {
   display: flex;
