--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -315,7 +315,7 @@
           justify-content: space-between;
           flex-direction: row;
 
-          button {
+          a button {
             padding: 10px 50px;
           }
         }
