CRT-17: name auto suggest

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -45,3 +45,4 @@
 @import 'components/customspinner';
 @import 'components/calendar/calendar';
 @import 'components/confirm-modal';
+@import 'components/custom-autosuggest';
