my gear - auto name suggest integration when gear editing

--- a/src/scss/bootstrap4.1.3/_dropdown.scss
+++ b/src/scss/bootstrap4.1.3/_dropdown.scss
@@ -147,6 +147,9 @@
 .dropdown-menu.show {
   display: block;
   width: 100%;
+  button:active {
+    background-color: #A4A4A4;
+  }
 }
 
 // Dropdown section headers
