--- a/src/scss/pages/editgear.scss
+++ b/src/scss/pages/editgear.scss
@@ -13,66 +13,83 @@
   .edit_listgear_body_all{
     display: flex;
     .edit_listgear_body_left{
-      .ELBL_info{
+      .ELBL_info {
           flex-direction: column;
           margin-top: 10px;
 
+          .flex-row > *:nth-child(n+2) {
+            margin-left: 0 !important;
+          }
           .flex-row {
             align-items: flex-start;
-            .info_header {
-              display: block;
-              margin: 0;
-              margin-left: 10px;
-              padding: 0;
-              position: inherit;
+
+            &:first-child {
+              margin-bottom: 25px;
             }
-            .ELBL_info_column{
-              display:-webkit-box!important;
-              width: 100%;
-              .ELBLIC_div{
-                padding:0;
-                margin: 0;
+            .info_header {
+              font-size: 11px;
+              line-height: 13px;
+              letter-spacing: 0.08em;
+              text-transform: uppercase;
+              color: #252525;
+              margin: 0;
+              padding-left: 15px;
+            }
+            .ELBLIC_div {
+              padding: 0;
+              margin: 0;
 
-                button{
-                  font-family: Helvetica Neue;
-                  font-size: 16px;
-                  font-weight: 700;
-                  padding-bottom: 17px;
-                  padding-left:9px;
-                  color: #000 !important;
-                }
-                .custom-input {
-                  padding-top:11px;
-                  input {
-                    padding-bottom: 28px;
-                  }
-
-                }
+              &:first-child {
+                padding-right: 10px;
               }
-              .ELBLIC_div3 {
-                padding:0;
-                margin:0;
-                padding-left:27px;
-                .custom-input {
-                  padding-top:11px;
-                  input {
-                    padding-bottom: 28px;
-                  }
-                }
+              &:last-child {
+                padding-left: 10px;
               }
-
-              .theme-form-field{
-                margin:0;
+              .custom-beautiful-textfield {
                 width: 100%;
+                input {
+                  padding: 0 0 17px 15px;
+                }
               }
-              input {
-                font-family: Helvetica Neue;
+              .custom-auto-suggest-container {
+                margin-top: 2px;
+                margin-left: 1px;
+                border-bottom: solid 1px #EAEAEA;
+              }
+              button {
                 font-size: 16px;
                 font-weight: 700;
+                padding-bottom: 10px;
+                padding-left: 15px;
+                color: #000 !important;
               }
-              .placeholder-label{
-                display: none;
+            }
+            .ELBLIC_div3 {
+              padding:0;
+              margin:0;
+              padding-left:27px;
+              .custom-input {
+                padding-top:11px;
+                input {
+                  padding-bottom: 28px;
+                }
               }
+            }
+            .theme-form-field {
+              margin:0;
+              width: 100%;
+
+              button {
+                width: 100%;
+              }
+            }
+            .placeholder-label{
+              display: none;
+            }
+            input {
+              font-family: Helvetica Neue;
+              font-size: 16px;
+              font-weight: 700;
             }
           }
 
@@ -94,9 +111,7 @@
                 box-shadow: none;
               }
             }
-
-
-        }
+          }
         .ELBL_info_title{
           font-family: Helvetica Neue;
           font-size: 12px;
@@ -170,9 +185,7 @@
           .form-accessories{
             margin-top: 43px;
           }
-
         }
-
       }
       .ELBL_photos{
 
@@ -213,8 +226,15 @@
           }
         }
       }
-      .ELBL_address{
-        .add-gear-address{
+      .ELBL_address {
+        .add-gear-address {
+          .custom-beautiful-textfield {
+            width: 35%;
+            margin-right: 15px;
+            input {
+              padding-left: 15px;
+            }
+          }
           table {
             margin-top:25px;
             display: flex;
@@ -237,7 +257,6 @@
       .ELBR_payment{
         background-color: #faf8f9;
         padding: 10px;
-        height: 100%;
         height: 446px;
         margin-left: 31px;
         .ELBLP_content{
