--- a/src/scss/pages/checkout.scss
+++ b/src/scss/pages/checkout.scss
@@ -94,7 +94,7 @@
     margin-top: 15px;
   }
   .btn-edit-order-bottom {
-    padding: 0 20px;
+    padding: 5px 30px;
   }
   .btn-payment {
     padding: 8px 50px;
